verificação do hero

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,6 +1,5 @@
-.hero
-{
-    padding: 5.6vw;
-    min-height: 80vh;
-    background-image: url(../images/IMG.webp);
+.hero{
+    background-color: rgb(91, 62, 238);
+    background-image:url(../images/hero_desktop.jpeg);
+    padding: 50px;
 }
