--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $CorDeFundo: #140404;
 $CorTextoPrincipal: silver;
 $CorTextoSecundario: #f9f9f9;
+$corDeFundoBotaoPrimario: #6421FF;
+$corDeFundoBotaoSecundario: #0063e5;
+$corDeFundoBotaoDark: #000;
