--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -10,7 +10,7 @@
     {
         display: flex;
         justify-content: space-around;
-        margin-top: 50px;
+        margin-top: 50vh;
         &__item
         {
             text-align: center;
