--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @use '_variaveis.scss';
 @use '__hero.scss';
 @use '_plans.scss';
+@use '_available-devices.scss';
+@use '_faq.scss';
+@use '_footer.scss';
+@use '_header.scss';
 
 @font-face
 {
@@ -23,6 +27,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Avenir, sans-serif;
+  list-style: none;
 }
 
 body
@@ -84,14 +89,91 @@ body
 
 .button
 {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 60px;
   font-size: 18px;
   color: variaveis.$CorTextoSecundario;
-  background-color: #6421FF;
+  background-color: variaveis.$corDeFundoBotaoPrimario;
   text-transform: uppercase;
   border-radius: 4px;
-  margin-top: 2vw;
-  margin-bottom: 8px;
+  text-decoration: none;
+  padding: 8px 14px;
+  letter-spacing: 1px;
+  border: 1px solid variaveis.$corDeFundoBotaoPrimario; 
+
+  &:hover
+    {
+      background-color: lighten(variaveis.$corDeFundoBotaoPrimario, 3%);
+    }
+  
+  &--secondary
+  {
+    background-color: variaveis.$corDeFundoBotaoSecundario; 
+    border-color: variaveis.$corDeFundoBotaoSecundario;
+
+    &:hover
+    {
+      background-color: lighten(variaveis.$corDeFundoBotaoSecundario, 3%);
+    }
+  }
+
+  &--dark
+  {
+    background-color: rgba(variaveis.$corDeFundoBotaoDark, 0.8);
+    border-color: variaveis.$CorTextoSecundario;
+
+    &:hover
+    {
+      background-color: variaveis.$CorTextoSecundario;
+      color: variaveis.$CorDeFundo
+    }
+  }
+}
+
+.image-text-section
+{
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img
+    {
+        max-width: 100%;
+    }
+
+    &__text_container
+    {
+        padding: 0 2vw;
+
+        h2
+        {
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width
+    {
+      display: block;
+      position: relative;
+      img
+      {
+        width: 100%;
+      }
+
+      &__text_container
+      {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: calc(50% - 5.6vw);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        left: 50%;
+      }
+    }
 }
