--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,22 +52,42 @@ body
 .text--big
 {
   @include text(18px);
+
+  @media (max-width: 768px)
+  {
+    @include text(15px);
+  }
 }
 
 .text
 {
   @include text;
+
+  @media (max-width: 768px)
+  {
+    @include title(24px)
+  }
 }
 
 .text--small
 {
   @include text(12px);
+
+  @media (max-width: 768px)
+  {
+    @include text(11px);
+  }
 }
 
 
 .title--big
 {
   @include title(44px);
+
+  @media (max-width: 768px)
+  {
+    @include title(26px);
+  }
 }
 
 .title
@@ -78,6 +98,11 @@ body
 .title--small
 {
   @include title(28px);
+
+  @media (max-width: 768px)
+  {
+    @include title(22px);
+  }
 }
 
 .link-text
@@ -140,6 +165,11 @@ body
     grid-template-columns: 1fr 1fr;
     align-items: center;
 
+  @media(max-width: 768px)
+  {
+    display: block;
+  }
+
     img
     {
         max-width: 100%;
@@ -174,6 +204,13 @@ body
         flex-direction: column;
         justify-content: center;
         left: 50%;
+
+        @media(max-width: 768px)
+        {
+          position: relative;
+          left: 0;
+          width: 100%;
+        }
       }
     }
 }
