--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -11,6 +11,18 @@
         display: flex;
         justify-content: space-around;
         margin-top: 50vh;
+
+        @media(max-width: 768px)
+        {
+            margin-top: 0.5vh;
+            display: block;
+        }
+
+        .button
+        {
+            margin-top: 24px;
+        }
+
         &__item
         {
             text-align: center;
